Adding the necessary configurations

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,15 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-db": "cat db_schema.sql | sqlite3 database.db #build anew database from the sql file",
+    "build-db": "cat database.sql | sqlite3 database.db #build anew database from the sql file",
     "clean-db": "rm database.db #remove the old database",
-    "build-db-win": "sqlite3 database.db < db_schema.sql",
-    "npm build-database": "sqlite3 database.db < db_schema.sql",
+    "build-db-win": "sqlite3 database.db < database.sql",
     "clean-db-win": "del database.db",
-    "npm clean-database": "del database.db",
-    "start": "node index.js"}
-    ,
+    "start": "node index.js"
+  },
   "dependencies": {
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
