Update logo and titles

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "QuizRevise",
-  "name": "QuizRevise",
+  "short_name": "ExamQuizRevise",
+  "name": "ExamQuizRevise",
   "icons": [
     {
       "src": "favicon.ico",
