Added full test cases

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build-db": "cat database.sql | sqlite3 database.db #build anew database from the sql file",
     "build-db-win": "sqlite3 database.db < database.sql",
     "clean-db-win": "del database.db",
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "python -m unittest test_flask_app.py"
   }
 }
