--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^17.0.76",
+    "@types/react-dom": "^18.2.21",
     "axios": "^1.6.7",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
